--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-merlot
+
+title: [Winnie's YMP Project]
+description: [In this Website, Winnie will detail what she has learned about the intersection between Psychology and Facial Expressions and Body Language.]
